--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
         <h2 class="section-title">ESTABELECER CONEXÃO</h2>
         
         <div class="contact-section">
-            <form action="https://formsubmit.co/SEU_EMAIL_AQUI" method="POST">
+            <form action="https://formsubmit.co/celestinodiniz@gmail.com" method="POST">
                 <!-- ANTI-SPAM & CONFIG -->
                 <input type="hidden" name="_subject" value="NOVO CHAMADO: DCELL TECH">
                 <input type="hidden" name="_template" value="table">
@@ -1302,3 +1302,4 @@
     </script>
 </body>
 </html>
+
