--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     
     <!-- Ícones (FontAwesome) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="s://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <style>
         /* --- 1. VARIÁVEIS GLOBAIS --- */
@@ -884,7 +884,7 @@
         
         <header>
             <div class="logo-container logo-glow">
-                <svg viewBox="-4 -4 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg viewBox="-4 -4 72 72" fill="none" xmlns="https://www.w3.org/2000/svg">
                     <path d="M32 4L58 19V45L32 60L6 45V19L32 4Z" stroke="#00e5ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M6 19L16 25" stroke="#00e5ff" stroke-width="1.5" stroke-linecap="round"/>
                     <path d="M58 45L48 39" stroke="#00e5ff" stroke-width="1.5" stroke-linecap="round"/>
@@ -1302,4 +1302,5 @@
     </script>
 </body>
 </html>
+
 
