--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="pt-br">
 <head>
+    <meta name="google-site-verification" content="z5rZQUW5TAwEG_BxbjQ8wVpcNSTMXEkyR35m_48PvP0" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <title>DCELL Tech | Soluções em Alta Performance</title>
@@ -1301,6 +1302,7 @@
     </script>
 </body>
 </html>
+
 
 
 
